# AutoJaga

./: .gitignore  100_PERCENT_COVERAGE_ACHIEVED.md  3model.md  7harness.md  A1.md  A2.md  A2A_AGENT_AWARENESS_COMPLETE.md  A2A_HANDOFF_ARBITRATOR_COMPLETE.md  A3.md  A4.md  A5.md  A6.md  A7.md  AAInter.md  AGENTS_MD_RULES_ADDITION.md  AGENT_LOOP_FIX_SUMMARY.md  API_CALL_AUDIT_REPORT.md  AUDIT_FOR_SONNET.md  AUTOJAGA_AGENT_RUNTIME_COMPLETE.md  AUTOJAGA_QWEN_PLUS_WORKING.md  AUTOJAGA_VS_AUTORESEARCH_AUDIT.md  AUTOMATIC_INTERCEPTORS_COMPLETE.md  AWARENESS_TOOLS_FULLY_INSTALLED.md  AuditLoop.md  BUG_FIXES_COMPLETE.md  CHANGELOG.md  CIRCUIT_BREAKER_FIX_COMPLETE.md  CLI.md  CLIprob.md  COGNITIVESTACK_IMPLEMENTATION_COMPLETE.md  COMMAND_REGISTRY_COMPLETE.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_FIX_ANALYSIS.md  CONFIG_MIGRATION_COMPLETE.md  CONTEXT_ENGINEERING_SUMMARY.md  CONTEXT_ENG_IMPLEMENTATION_COMPLETE.md  CONTRIBUTING.md  COPAW_100_PERCENT_WORKING.md  COPAW_FINAL_COMPLETE.md  COPAW_FINAL_STATUS.md  (+167 more)
.github/workflows/: test.yml
2engine/: confidence_engine.py
2modelfluid/: fluidDispatcher-wiring.md  model_switchboard.py
A2A/: a2a_handoff.py
AutoJaga-Base/: .env.example  pyproject.toml
AutoJaga-Base/autojaga/: __init__.py
AutoJaga-Base/autojaga/config/: __init__.py  schema.py
AutoJaga-Base/autojaga/mcp/: __init__.py
AutoJaga-Base/tests/: test_smoke.py
AutoJagaMAS/: .env.example  LEGACY_NOTES.md  README.md  __init__.py  requirements.txt
AutoJagaMAS/agents/: __init__.py  jaga_bdi_agent.py
AutoJagaMAS/config/: ajm_config.json
AutoJagaMAS/contracts/: __init__.py  jagashell_contract.py
AutoJagaMAS/core/: __init__.py  jaga_bdi_context_provider.py  jaga_bdi_model.py  jaga_model_router.py
AutoJagaMAS/docs/: AGI_LEVELS.md  ARCHITECTURE.md  EXPLAIN_SIMPLY.md  MANGLIWOOD_RESEARCH.md
AutoJagaMAS/graphs/: __init__.py  base_mas_template.py  mangliwood_swarm.py
AutoJagaMAS/personas/: botanist.yaml  chemist.yaml  conductor.yaml  pathologist.yaml  synthesiser.yaml
AutoJagaMAS/tests/: test_smoke.py
ContextENG/: context_builder.py  session_index.py
Extraharness/: harness_wiring.md  phase2_brier_scorer.py  phase4_strategic_interceptor.py
FIXinfra/: infrastructure_fix_guide.md
Final2/: connection_detector.py  loop_wiring_bridge_connector.md  memory_outcome_bridge.py
JagaChatbot/: LICENSE
JagaChatbot/jagachatbot/: utils.py
JagaRAG/: DEEPMIND_AGI_LEVELS.md  README.md
MemoryUp/: memory_manager.py  memory_manager_wiring.md
ProactiveCLI/: cli_wiring.md  jagabot_cli.py
REPGuard/: repetition_guard.py  skill_read_fix.md
Selfmodel/: self_model_engine.py  self_model_wiring.md
Termux_deploy/: .env.termux  README.md  TERMUX_INSTALL.md  requirements-termux.txt
Termux_deploy/config/: termux_config.json
Termux_deploy/scripts/: check_health.sh  install.sh  start.sh
Tokensaving/: QWEN_IMPLEMENTATION_PROMPT_v2.md  history_compressor.py  memory_gate.py  token_buget.py  tool_filter.py  trivial_guard.py
Usereasy/: command_registry.py
YOLOJAGA/: yolo_mode.py
data/solidified/: categorized.json  enriched.json  enriched_with_fens.json  fens_from_sessions.json  graph_all_debates_complete.json  graph_ki_complete.json  graph_ki_lesson.json  graph_london_debate.json  graph_minority_debate.json  graph_ready.json  graph_sicilian_success.json  graph_with_consensus.json  graph_with_debate.json  graph_with_eval.json  graph_with_turn_lesson.json  neo4j_import.cypher  relationships.json
examples/: decision_engine.py
fix2model/: Instruction.md  cognitive_stack.py  cognitive_stack_prompt.md
implement/: 00_START_HERE.md  00_START_HERE_EXPLORATION.txt  4b.md  CODEBASE_EXPLORATION.md  EXECUTIVE_SUMMARY.md  EXPLORATION_INDEX.txt  FILE_REFERENCE_MAP.md  INDEX.md  INFRASTRUCTURE_REPORT.md  INTEGRATION_DIAGRAM.md  INTEGRATION_QUICK_START.md  JagaAudit.md  MCedit.md  QUICK_REFERENCE.md  Qinter.md  README_EXPLORATION.md  UiUp.md  UpgradeClaw.md  Upsonic.md  fix2.md  fix2fix.md  fixagain.md  fixcal.md  fixingerror.md  fixsand.md  fixswarm.md  fixtools.md  graph.md  mcp.md  nextengine.md  nextswarm.md  phase  phase3.md  phase5.md  pluginI.md  problemfix.md  repairgraph.md  swarm.md  swarmUp.md  swarmUpphase2.md  (+4 more)
jagabot/: TEST_SUITE_EXPANSION_SUMMARY.md  __init__.py  __main__.py
jagabot/agent/: __init__.py  compressor.py  context.py  context_builder.py  loop.py  memory.py  memory_outcome_bridge.py  outcome_tracker.py  session_writer.py  subagent.py  (+3 more)
legacy/: AGENTS.md  CODE_OF_CONDUCT.md  Dockerfile  analyze_data_simple.py  code_validator.py  copaw.sh  copaw_manager.py  copaw_orchestrator_v2.py  docker-compose.yml  gen_stats.py  install_bridge.py  install_copaw.sh  orchestrator_v3.py  qwen25_coder_client.py  verify_token_savings.py
legacy/repos/JagaChatbot/: .env.example  DEEPMIND_AGI_LEVELS.md  pyproject.toml
legacy/repos/JagaChatbot/jagachatbot/agent/: __init__.py  memory.py
legacy/repos/JagaChatbot/jagachatbot/cli/: __init__.py  interactive.py
legacy/repos/JagaChatbot/jagachatbot/config/: loader.py  schema.py
legacy/repos/JagaChatbot/tests/: test_smoke.py
legacy/repos/JagaRAG/: .env.example  ARCHITECTURE.md  pyproject.toml
legacy/repos/JagaRAG/demo_data/: mangliwood_notes.md
legacy/repos/JagaRAG/jagaragbot/: __init__.py  __main__.py
legacy/repos/JagaRAG/jagaragbot/agent/: __init__.py  compressor.py  context.py  loop.py
legacy/repos/JagaRAG/jagaragbot/channels/: base.py
legacy/repos/JagaRAG/jagaragbot/cli/: interactive.py
legacy/repos/JagaRAG/jagaragbot/config/: __init__.py
legacy/repos/JagaRAG/jagaragbot/ingestion/: pipeline.py
legacy/repos/JagaRAG/jagaragbot/providers/: litellm_provider.py
legacy/repos/JagaRAG/tests/: test_smoke.py
logs/: research_agent_baseline.py
quantalogic_stub/: pyproject.toml  setup.py
t-nanobot/: audit2.md  backup.timestamp  check.md  copilot.md
tests/: test_agent_loop_json_normalization.py  test_email_channel.py  test_toad_integration.py
verify_test/: audit_report.txt  calculate_correct_mean.py  calculate_mean.py  claim.txt  final_report.txt
workspace/: pool_B.txt
(+623 files in other folders)
