[project]
name = "jagaragbot"
version = "1.0.0"
description = "DeepMind Level 2 Retrieval-Augmented Agent"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "matparang"}
]
keywords = ["ai", "rag", "retrieval", "llm", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
vectors = [
    "sentence-transformers>=2.2.0",
]
pdf = [
    "pypdf>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "pypdf>=3.0.0",
]

[project.scripts]
jagaragbot = "jagaragbot.cli.interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jagaragbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
